Fix broken CSS.
git-svn-id: https://svn.apache.org/repos/asf/roller/trunk@1642542 13f79535-47bb-0310-9956-ffa450edef68

--- a/app/src/main/webapp/themes/gaurav/css/style.css
+++ b/app/src/main/webapp/themes/gaurav/css/style.css
@@ -121,7 +121,7 @@ h3,
 }
 
 h4 {
-    color:    font-size:130%;
+    font-size:130%;
     font-weight:400;
     margin-bottom:10px;
 }
